tests/semantic/fail/var-7.tiger
let
	var a : int := 0
in
	a ()
end
